Show visualizer on mobile, fix iOS autoplay

--- a/css/home.css
+++ b/css/home.css
@@ -65,9 +65,6 @@ body:has(.home-nav a:hover) #cursorMv {
 }
 
 @media (max-width: 800px) {
-  .video-container {
-    display: none;
-  }
   .cursor-mv {
     display: none;
   }
